i965: Don't write mrf assignment for pointsize output

https://bugs.freedesktop.org/show_bug.cgi?id=31894